--- a/composer.json
+++ b/composer.json
@@ -39,6 +39,9 @@
         }
     },
     "autoload": {
+        "files": [
+            "app/Helpers/helpers.php"
+        ],
         "psr-4": {
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
