--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,7 @@
     },
     "autoload": {
         "files": [
-            "app/Helpers/helpers.php"
+            "app/Helpers/helper.php"
         ],
         "psr-4": {
             "App\\": "app/",
