--- a/package.json
+++ b/package.json
@@ -19,5 +19,10 @@
         "resolve-url-loader": "^3.1.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "laravel-echo": "^1.14.0",
+        "laravel-echo-server": "^1.6.3",
+        "socket.io-client": "^4.5.2"
     }
 }
