--- a/package.json
+++ b/package.json
@@ -23,6 +23,6 @@
     "dependencies": {
         "laravel-echo": "^1.14.0",
         "laravel-echo-server": "^1.6.3",
-        "socket.io-client": "^4.5.2"
+        "socket.io-client": "2.3.0"
     }
 }
