--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^7.3",
+        "beyondcode/laravel-websockets": "^1.13",
         "bumbummen99/shoppingcart": "^4.0",
         "doctrine/dbal": "^3.4",
         "fideloper/proxy": "^4.2",
@@ -20,6 +21,7 @@
         "laravel/ui": "^3.4",
         "opentok/opentok": "^4.11",
         "predis/predis": "^2.0",
+        "pusher/pusher-php-server": "^7.0",
         "stripe/stripe-php": "^9.4",
         "yajra/laravel-datatables": "^1.5"
     },
