--- a/composer.json
+++ b/composer.json
@@ -22,6 +22,7 @@
         "opentok/opentok": "^4.11",
         "predis/predis": "^2.0",
         "pusher/pusher-php-server": "^7.0",
+        "spatie/laravel-medialibrary": "^9.12",
         "stripe/stripe-php": "^9.4",
         "yajra/laravel-datatables": "^1.5"
     },
